--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,16 +14,9 @@ cache:
 
 e2e:playwright:
   stage: test
+  tags:
+    - regression
   script:
     - npm ci
     - npx playwright install --with-deps
     - npm test
-  artifacts:
-    when: always
-    expire_in: 7 days
-    paths:
-      - playwright-report/
-      - test-results/
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: $CI_COMMIT_BRANCH
