--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,9 @@ cache:
 e2e:playwright:
   stage: test
   tags:
-    - regression
+    - shared
   script:
-    # - yarn config set registry "https://registry.internal.company"
-    # - yarn install --frozen-lockfile
-    # - npx playwright install --with-deps
+    - yarn config set registry "https://registry.internal.company"
+    - yarn install --frozen-lockfile
+    - npx playwright install --with-deps
     - yarn test
