--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,6 +12,9 @@ jobs:
     container:
       image: mcr.microsoft.com/playwright:v1.57.0-jammy
 
+    env:
+      HOME: /root
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
