--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,7 +3,6 @@ name: e2e
 on:
   push:
     branches: [main]
-  pull_request:
 
 jobs:
   playwright:
@@ -41,11 +40,22 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run tests
-        run: yarn test
+        run: npx playwright test --reporter=json > /tmp/report.json
 
-      - name: Upload Playwright HTML report
+      - name: Prepare payload
+        run: node scripts/parse-report.mjs /tmp/report.json /tmp/parsed-report.json
+
+      - name: Send Notification to Google Chat
         if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
+        env:
+          GCHAT_WEBHOOK_URL: ${{ secrets.GCHAT_WEBHOOK_URL }}
+          PIPELINE_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        run: |
+          sed \
+            -e "s|__PIPELINE_URL__|$PIPELINE_URL|g" \
+            /tmp/parsed-report.json > /tmp/parsed-report.json
+
+          curl -sS -X POST \
+            -H "Content-Type: application/json; charset=UTF-8" \
+            --data-binary @/tmp/parsed-report.json \
+            "$GCHAT_WEBHOOK_URL"
