--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.3"
+    "@types/node": "^25.0.3",
+    "cross-env": "^10.1.0"
   },
   "scripts": {
     "codegen": "playwright codegen",
     "test": "playwright test",
     "test:ui": "playwright test --ui"
+  },
+  "dependencies": {
+    "axios": "^1.13.2",
+    "moment": "^2.30.1"
   }
 }
