--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0"
   }
 }
